fix for mobile, draw the search input behind the current info
this is done by bringing the current info div further forward

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -46,11 +46,11 @@
   position: fixed;
   height: 60px;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
   overflow: hidden;
   background-color: #cef;
   box-shadow: 0 0 30px #ccc;
-  -webkit-transform: translateZ(0); 
+  -webkit-transform: translateZ(0);
 }
 .info_wrapper{
   width: calc(100% - 70px); /* cover width plus left padding */
